fix(tab): fix tab panel focus styling in contrast
affects: @entur/tab

--- a/packages/tab/src/index.scss
+++ b/packages/tab/src/index.scss
@@ -153,5 +153,8 @@
   &:focus {
     outline: $outlines-focus;
     outline-offset: $outline-offsets-focus;
+    .eds-contrast & {
+      outline: $outlines-focus-contrast;
+    }
   }
 }
